--- a/index.html
+++ b/index.html
@@ -1,71 +1,9 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>Level 1: Variation 1</title>
-    </head>
+<head>25 Variations</head>
     <body>
-
-        <h1>I Wandered Lonely as a Cloud (Daffodils)</h1>
-        <p>I wandered lonely as a cloud
-            <br>
-            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;floats
-            <br>
-            That &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;on high o'er vales and hills,
-            <br>
-            When all at once I saw a crowd,
-            <br>
-            A host, of golden daffodils; 
-            <br>
-            Beside&nbsp;&nbsp;&nbsp;the lake,&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;the trees,
-            <br>
-            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;beneath
-            <br>
-            F&nbsp;l&nbsp;u&nbsp;t&nbsp;t&nbsp;e&nbsp;r&nbsp;i&nbsp;n&nbsp;g and d&nbsp;a&nbsp;n&nbsp;c&nbsp;i&nbsp;n&nbsp;g in the breeze.
-            <br>
-            <br>
-            Continuous as the stars that shine
-            <br>
-            And t&nbsp;w&nbsp;i&nbsp;n&nbsp;k&nbsp;l&nbsp;e on the milky way,
-            <br>
-            They s&nbsp;&nbsp;t&nbsp;&nbsp;r&nbsp;&nbsp;e&nbsp;&nbsp;t&nbsp;&nbsp;c&nbsp;&nbsp;h&nbsp;&nbsp;e&nbsp;&nbsp;d in never&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;ending line
-            <br>
-            Along the margin of a bay:
-            <br>
-            Ten thousand saw I at a glance,
-            <br>
-            Tossing 
-            <br>
-            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;their heads in sprightly dance.
-            <br>
-            <br>
-            The waves beside them d&nbsp;a&nbsp;n&nbsp;c&nbsp;e&nbsp;d; but they
-            <br>
-            Out-did the sparkling waves in glee:
-            <br>
-            A poet could not but be gay,
-            <br>
-            In such a jocund company:
-            <br>
-            I gazed- &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;and gazed-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; but little thought
-            <br>
-            What wealth the show to me had brought:
-            <br>
-            <br>
-            For oft, when on my couch I l&nbsp;i&nbsp;e
-            <br>
-            In &nbsp;&nbsp;vacant&nbsp;&nbsp; or in &nbsp;&nbsp;pensive&nbsp;&nbsp; mood,
-            <br>
-            They f&nbsp;l&nbsp;a&nbsp;s&nbsp;h upon that inward eye
-            <br>
-            Which is the bliss of &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;solitude; 
-            <br>
-            And then my heart with pleasure f&nbsp;i&nbsp;l&nbsp;l&nbsp;s,
-            <br>
-            And d&nbsp;a&nbsp;n&nbsp;c&nbsp;e&nbsp;s with the daffodils. 
-            <br>
-
-
-        </p>
-
-    </body>
+    <p><a href="index0.html">Level 1: Variation 1</a></p>
+    <p><a href="index2.html">Level 1: Varation 2</a></p>
+    <p><a href=""</p>
+</body>
 </html>
