--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html>
 <head>25 Variations</head>
     <body>
-    <p><a href="index0.html">Level 1: Variation 1</a></p>
-    <p><a href="index2.html">Level 1: Varation 2</a></p>
-    <p><a href=""</p>
+    <p><a href="poems/index0.html">Level 1: Variation 1</a></p>
+    <p><a href="poems/index2.html">Level 1: Varation 2</a></p>
+     <p><a href="poems/index2.html">Level 1: Varation 2</a></p>
+
 </body>
 </html>
