--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>25 Variations</head>
     <body>
-    <p><a href="poems/index0.html">Level 1: Variation 1</a></p>
+    <p><a href="https://www.w3schools.com/html/html_links.asp">Level 1: Variation 1</a></p>
     <p><a href="poems/index2.html">Level 1: Varation 2</a></p>
      <p><a href="poems/index2.html">Level 1: Varation 2</a></p>
 
