connected all links
connected all links

--- a/index.html
+++ b/index.html
@@ -1,10 +1,20 @@
 <!DOCTYPE html>
 <html>
-<head>25 Variations</head>
+    <head>25 Variations</head>
     <body>
-    <p><a href="https://www.w3schools.com/html/html_links.asp">Level 1: Variation 1</a></p>
-    <p><a href="poems/index2.html">Level 1: Varation 2</a></p>
-     <p><a href="poems/index2.html">Level 1: Varation 2</a></p>
+        <p><a href="poems/index0.html">Level 1: Variation 1</a></p>
+        <p><a href="poems/index2.html">Level 1: Varation 2</a></p>
+        <p><a href="poems/index3.html">Level 1: Varation 3</a></p>
+        <p><a href="poems/index4.html">Level 1: Variation 4</a></p>
+        <p><a href="poems/index5.html">Level 1: Variation 5</a></p>
+        <p><a href="poems/index6.html">Level 2: Variation 1</a></p>
+         <p><a href="poems/index7.html">Level 2: Variation 2</a></p>
+        <p><a href="poems/index8.html">Level 2: Variation 3</a></p>
+        <p><a href="poems/index9.html">Level 2: Variation 4</a></p>
+        <p><a href="poems/index10.html">Level 2: Variation 5</a></p>
 
-</body>
+        
+
+
+    </body>
 </html>
