added author name
added author name

--- a/poems/index0.html
+++ b/poems/index0.html
@@ -63,6 +63,9 @@
             <br>
             And d&nbsp;a&nbsp;n&nbsp;c&nbsp;e&nbsp;s with the daffodils. 
             <br>
+             <br>
+             <br>
+           William Wordsworth
 
 
         </p>
