--- a/poems/index22.html
+++ b/poems/index22.html
@@ -1,14 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Level 4: Variation 5</title>
+<title>Level 5: Variation 2</title>
 </head>
-     <link rel="stylesheet" type="text/css" href="index20.css">
 <body>
 
 <h1>I Wandered Lonely as a Cloud (Daffodils)</h1>
     <br>
-<p class="uppercase">I wandered lonely as a cloud
+<p>I wandered lonely as a cloud
     <br>
 That floats on high o'er vales and hills,
     <br>
