--- a/poems/index4.html
+++ b/poems/index4.html
@@ -58,6 +58,8 @@ And &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;then &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;my &nbsp;&n
     <br>
 And &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;dances &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;with &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;the &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;daffodils. 
     <br>
+    <br>
+    William Wordsworth
 
 
 </p>
