--- a/poems/index6.html
+++ b/poems/index6.html
@@ -60,6 +60,9 @@ And then my heart with pleasure fills,
     <br>
 And dances with the <span style="color:yellow">Daffodils</span>. 
     <br>
+    <br>
+    <br>
+    William Wordsworth
 
 
 </p>
