--- a/poems/index7.html
+++ b/poems/index7.html
@@ -58,6 +58,9 @@ And then my heart with pleasure fills,
     <br>
 And dances with the <span style="color:yellow">Daffodils</span>. 
     <br>
+    <br>
+    <br>
+    William Wordsworth
 
 
 </p>
