--- a/index.html
+++ b/index.html
@@ -1,30 +1,14 @@
 <!DOCTYPE html>
 <html>
-    <head>25 Variations</head>
-    <body>
-        <p><a href="poems/index0.html">Level 1: Variation 1</a></p>
-        <p><a href="poems/index2.html">Level 1: Varation 2</a></p>
-        <p><a href="poems/index3.html">Level 1: Varation 3</a></p>
-        <p><a href="poems/index4.html">Level 1: Variation 4</a></p>
-        <p><a href="poems/index5.html">Level 1: Variation 5</a></p>
-        <p><a href="poems/index6.html">Level 2: Variation 1</a></p>
-         <p><a href="poems/index7.html">Level 2: Variation 2</a></p>
-        <p><a href="poems/index8.html">Level 2: Variation 3</a></p>
-        <p><a href="poems/index9.html">Level 2: Variation 4</a></p>
-        <p><a href="poems/index10.html">Level 2: Variation 5</a></p>
-        <p><a href="poems/index11.html">Level 3: Variation 1</a></p>
-         <p><a href="poems/index12.html">Level 3: Variation 2</a></p>
-         <p><a href="poems/index13.html">Level 3: Variation 3</a></p>
-         <p><a href="poems/index14.html">Level 3: Variation 4</a></p>
-         <p><a href="poems/index15.html">Level 3: Variation 5</a></p>
-         <p><a href="poems/index16.html">Level 4: Variation 1</a></p>
-         <p><a href="poems/index17.html">Level 4: Variation 2</a></p>
-         <p><a href="poems/index18.html">Level 4: Variation 3</a></p>
-         <p><a href="poems/index19.html">Level 4: Variation 4</a></p>
-         <p><a href="poems/index20.html">Level 4: Variation 5</a></p>
-
-        
-
-
-    </body>
+<head>
+  		<link rel="stylesheet" type="text/css" href="CSS/style.css">
+</head>
+<body>
+<ul>
+<li><a href="microsite/Microsite.html">Microsite</a></li>
+<li><a href="25_Variations/index.html">25 Variations</a></li>
+<li><a href="Malevich's_Boxes/suprematism-boxes/index.html">Exercise 1: Boxes</a></li>
+<li><a href=>Exercise 2: Hover States</a></li>
+</ul>
+</body>
 </html>
