--- a/microsite/Microsite.html
+++ b/microsite/Microsite.html
@@ -10,17 +10,16 @@
     </head>
     <body>
     <div class="title">
-        <p>A Cooking Demonstration on a Frozen Pond
-        <br>
+        <p>
         Multi Michelin star rated master chef Gordon Ramsay 
         <br>
-        shall be preparing a 5 course gormet meal for 20 lucky 
+        will be preparing a five course gourmet meal for 20
         <br>
-        indiviuals. This meal and its preparation shall take place
+        indiviuals. This meal and its preparation will take place
         <br>
         on a frozen pond, where a majority of the ingredients 
         <br>
-        have been sourced.Prepare yourself for a new level of dining 
+        have been sourced. Prepare yourself for a new level of dining 
         <br>
         never attempted or experienced before.</p>
         
@@ -101,6 +100,7 @@
         <br>
     
         <div id="ice"><h2>ICE</h2></div>
+        <div id="snow"></div>
         </div>
 
 <audio id="_fire" preload="auto">
